crates/uitest/fixtures/ty_check/index.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/index.fe
---
error[8-0000]: type mismatch
   ┌─ index.fe:17:7
   │
17 │     x[false]
   │       ^^^^^ expected `u256`, but `bool` is given

error[8-0016]: `core::ops::Index` trait is not implemented
   ┌─ index.fe:19:5
   │
19 │     f[1]
   │     ^^^^
   │     │
   │     `[]` can't be applied to `Foo`
   │     Try implementing `core::ops::Index` for `Foo`
